解决了fixed滚动穿透问题

--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,16 @@
         Learn how to configure a non-root public URL by running `npm run build`.
         -->
         <title>Luke Blog</title>
+        <!-- 
+            移动端rem自适应
+         -->
         <script>
             (function (doc, win) { var docEl = doc.documentElement, resizeEvt = 'orientationchange' in window ? 'orientationchange'
             : 'resize', recalc = function () { var clientWidth = docEl.clientWidth; if (!clientWidth) return; if(clientWidth>=640){ docEl.style.fontSize
             = '100px'; }else{ docEl.style.fontSize = 100 * (clientWidth / 640) + 'px'; } }; if (!doc.addEventListener) return; win.addEventListener(resizeEvt,
             recalc, false); doc.addEventListener('DOMContentLoaded', recalc, false); })(document, window); 
         </script>
+        <script type="text/javascript" src='./iscroll-master/iscroll.js'></script>
        </head>
     <body>
         <noscript>
