完善个人中心

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
         -->
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-        <link rel="stylesheet" href="./iconfont/demo.css">
-        <link rel="stylesheet" href="./iconfont/iconfont.css">
+        <link rel="stylesheet" href="/iconfont/demo.css">
+        <link rel="stylesheet" href="/iconfont/iconfont.css">
         <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
         <!--
         Notice the use of %PUBLIC_URL% in the tags above.
@@ -32,7 +32,7 @@
             = '100px'; }else{ docEl.style.fontSize = 100 * (clientWidth / 640) + 'px'; } }; if (!doc.addEventListener) return; win.addEventListener(resizeEvt,
             recalc, false); doc.addEventListener('DOMContentLoaded', recalc, false); })(document, window); 
         </script>
-        <script type="text/javascript" src='./iscroll-master/iscroll.js'></script>
+        <script type="text/javascript" src='/iscroll-master/iscroll.js'></script>
        </head>
     <body>
         <noscript>
